attached_assets/Pasted-2025-06-23-10-45-49-753-Uncaught-app-execution-Traceback-most-recent-call-last-File-home-ru-1750675753742_1750675753743.txt
2025-06-23 10:45:49.753 Uncaught app execution
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 128, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 669, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/app.py", line 12, in <module>
    from attendance_system import AttendanceSystem
  File "/home/runner/workspace/attendance_system.py", line 777
    elif analysis_type ==```python
                         ^
SyntaxError: invalid syntax
2025-06-23 10:46:34.139 Uncaught app execution
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 128, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 669, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/app.py", line 12, in <module>
    from attendance_system import AttendanceSystem
  File "/home/runner/workspace/attendance_system.py", line 777
    elif analysis_type ==```python
                         ^
SyntaxError: invalid syntax
2025-06-23 10:47:07.775 Uncaught app execution
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 128, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 669, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/app.py", line 562, in <module>
    main()
  File "/home/runner/workspace/app.py", line 247, in main
    show_main_app()
  File "/home/runner/workspace/app.py", line 365, in show_main_app
    st.session_state.attendance_system.show_attendance_interface(user)
  File "/home/runner/workspace/attendance_system.py", line 38, in show_attendance_interface
    self.show_attendance_status(user)
  File "/home/runner/workspace/attendance_system.py", line 571, in show_attendance_status
    start_date, end_date = self.get_preset_dates(date_preset)
                           ^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'AttendanceSystem' object has no attribute 'get_preset_dates'
